# learn-opengl

getting-started/: .gitignore  CMakeLists.txt  HelloWindow  glad.c  main.cpp
getting-started/glad/include/glad/: glad.h
